--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,6 +22,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run a one-line script
         run: |
+          echo $COMMIT_DATE
+          echo $COMMIT_ID
           NEW_VERSION4="${{env.MAJOR_VERSION}}${{env.MINOR_VERSION}}.${{env.RELEASE_VERSION}}.0"
           NEW_VERSION5="${{env.MAJOR_VERSION}}.${{env.MINOR_VERSION}}.${{env.RELEASE_VERSION}}.${{env.COMMIT_DATE}}.${{env.COMMIT_ID}}"
           echo $NEW_VERSION4
